objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Accounting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in charge for accounting process parts.</description>
        <label>Accounting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices_Accounting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_Open__c</fullName>
        <formula>Amount__c - Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offene Summe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Gezahlte Summe</label>
        <summarizedField>Invoice_Payment__c.Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Payment__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Bruttosumme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disable_Dunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mahnwesen aussetzen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c+Payment_Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c+Payment_Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c+Payment_Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fälligkeitsdatum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_My_Invoice__c</fullName>
        <formula>$User.Id = Accounting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <formula>Amount__c / 1.19</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nettosumme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <description>Invoice number.</description>
        <label>Rechnungsnummer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Rechnung_ID__c</fullName>
        <label>Old Rechnung ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Rechnungen</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Zahlungsfrist</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECHImpID__c</fullName>
        <externalId>true</externalId>
        <label>RECHImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Invoice_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uploaded_To_Dropbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hochgeladen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <formula>Amount__c - Net_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MwSt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>Object for storing and managing invoices towards customers.</description>
    <label>Rechnung</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rechnungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Number__c</columns>
        <columns>Amount__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>Stage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Alle Rechnungen nicht versendet - Draft</label>
    </listViews>
    <listViews>
        <fullName>All2</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alle_Rechnungen_Status_Paid</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Paid</value>
        </filters>
        <label>Alle Rechnungen gezahlt - Paid</label>
    </listViews>
    <listViews>
        <fullName>Alle_Rechnungen_bereits_versendet</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Amount_Open__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Sent</value>
        </filters>
        <label>Alle Rechnungen bereits versendet - Sent</label>
    </listViews>
    <listViews>
        <fullName>Open_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Number__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accounting__c</field>
            <operation>equals</operation>
        </filters>
        <label>Offene Rechnungen - ohne Accouting</label>
    </listViews>
</CustomObject>